--- a/02-ReactJS/02-ignite-timer/package.json
+++ b/02-ReactJS/02-ignite-timer/package.json
@@ -15,17 +15,19 @@
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
+    "@eslint/js": "^9.17.0",
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.15.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.12.0",
+    "globals": "^15.14.0",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.15.0",
+    "typescript-eslint": "^8.18.1",
     "vite": "^6.0.1"
   }
 }
